css/style.css
/* ... */
/* Large Devices Up: */
@media only screen and (min-width: 480px) {

  .trigger-icon {
    display: inline-block;
    vertical-align: middle;
    font-size: 3rem;
  }

  .menu-trigger-text {
    display: inline-block;
    line-height: 50px;
    vertical-align: middle;
    font-weight: 600;
    font-size: 1.6rem;
  }

  .grid-item-link {
    height: 90px;
    width: 80%;
    background-size: contain !important;
  }

  #history-text h3 {
    font-size: 5rem;
    margin: 30px 0 15px 0;
  }

  #history-text a {
    font-size: 3.2rem;
  }

  .text-segment .value-amount {
    font-size: 2.2rem;
  }

  .text-segment .value-title {
    font-size: 1.4rem;
  }

  .text-segment-3 .value-title {
    left: 9%;
    max-width: 57%;
  }

  .text-segment-4 .value-amount {
    top: 19%;
    left: 3%;
  }

  .text-segment-4 .value-title {
    top: 33%;
    left: 19%;
    max-width: 67%;
  }

  .drop-btn {
    width: auto;
  }

  #culture-col-3 h4 {
    text-align: center;
  }

}

/* Tablet Portrait Up: */
@media only screen and (min-width: 768px) {

  .title-section {
    vertical-align: middle;
  }

  #home-nav-logo {
    height: 71px;
    transform: scale(.9);
    transition: all 400ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
  }

  #home-nav-logo:hover {
    transform: scale(1);
  }

  #home-nav-logo span {
    line-height: 86px;
    font-size: 2.2rem;
  }

  #home-menu-trigger {
    line-height: 65px;
  }

  .title-section {
    font-size: 5.8rem;
  }

  .js-accordion-text {
    height: 92px;
  }

  .js-accordion-inner {
    position: absolute;
    left: 0;
    padding-left: 30px;
    text-align: left;
  }

  .js-fade-in-up {
    opacity: 0;
    transform: translateY(60px);
    transition: opacity 800ms ease, transform 800ms ease-out;
    transition-delay: 200ms;
  }

  .js-fade-in-up.show {
    opacity: 1;
    transform: translateY(0);
  }

  #menu-list {
    font-size: 6.2rem;
  }

  .grid-item {
    width: 32%;
  }

  .disabled-onepage-scroll .onepage-wrapper {
    min-height: 680px;
  }

  #history-text h3 {
    font-size: 4rem;
    margin: 30px 0 0 0;
  }

  #history-text a {
    font-size: 2rem;
  }

  .text-size-24 {
    font-size: 1.8rem;
  }

  .disabled-onepage-scroll .onepage-wrapper .section {
    margin-bottom: 100px !important;
  }

  #hello-panel .panel-inner {
    padding-top: 70px;
  }

  #page-header {
    position: fixed;
  }

  .internal-page {
    padding-top: 100px;
  }

  .internal-page h1,
  .case-study-item {
    margin-bottom: 100px;
  }

  .case-study-item {
    min-height: 360px;
  }

  .item-image {
    float: left;
    width: 41%;
    margin-bottom: 0;
  }

  .item-text {
    float: right;
    width: 55%;
  }

  .item-text-head {
    margin-left: -30px;
  }

  #csi-tfc .item-image img {
    margin-top: 32px;
  }

  #csi-forward-works .item-image img {
    margin-top: -40px;
  }

  #csi-appraisal-connector .item-image img {
    float: left;
  }

  #csi-tmp .item-image img {
    margin-right: -85px;
    margin-top: -15px;
  }

  #csi-llur .item-image img {
    margin-right: -45px;
    margin-top: -33px;
  }

  .item-text-body {
    font-size: 1.2rem;
  }

  .item-image img {
    float: right;
  }

}

/* Tablet Portrait up to Tablet Landscape (not inclusive): */
@media only screen and (min-width: 768px) and (max-width: 1023px) {

  .value-wheel-wrap {
    margin-top: 50px;
  }

  .value-title {
    font-size: 1rem !important;
  }

  .value-amount {
    font-size: 1.8rem !important;
  }

  .text-segment {
    position: absolute;
    width: 65%;
    height: 47%;
  }

  .text-segment-1 {
    right: 0;
    top: 0;
  }

  .text-segment-1 .value-title {
    top: 38%;
    left: 27%;
  }

  .text-segment-1 .value-amount {
    top: 21%;
    left: 21%;
  }

  .text-segment-2 {
    width: 45%;
    height: 45%;
    right: 0;
    top: 27%;
  }

  .text-segment-2 .value-title {
    right: 12%;
    top: 52%;
    text-align: center;
    max-width: 65%;
  }

  .text-segment-2 .value-amount {
    right: 5%;
    top: 35%;
    font-size: 1.6rem !important;
  }

  .text-segment-3 {
    bottom: 7%;
    left: 34%;
    width: 57%;
    height: 30%;
  }

  .text-segment-3 .value-title {
    left: 6%;
    top: 53%;
    max-width: 65%;
    text-align: center;
  }

  .text-segment-3 .value-amount {
    left: 11%;
    top: 27%;
  }

  .text-segment-4 {
    height: 55%;
    width: 32%;
    top: 37%;
    left: 3%;
  }

  .text-segment-4 .value-title {
    top: 36%;
    left: 12%;
    text-align: center;
    max-width: 75%;
  }

  .text-segment-4 .value-amount {
    font-size: 1.5rem !important;
    top: 23%;
    left: 2%;
  }

  .text-segment-5 {
    width: 50%;
    height: 33%;
    top: 5%;
    left: 5%;
  }

  .text-segment-5 .value-title {
    text-align: center;
    max-width: 80%;
    top: 52%;
    left: 9%;
  }

  .text-segment-5 .value-amount {
    top: 34%;
    font-size: 1.5rem !important;
    left: 17%;
  }

  #culture-col-1 {
    width: 100%;
    margin-bottom: 30px;
  }

  .home-team-img {
    width: 35%;
    float: left;
    margin: 0 0 0 40px;
  }

  #culture-col-1 h3 {
    margin-top: 40px;
  }

  #culture-col-2,
  #culture-col-3 {
    width: 170px;
  }

  #culture-col-2 .drop-btn,
  #culture-col-3 .drop-btn {
    width: 100%;
    font-size: 1.8rem;
  }

  #culture-col-2 {
    float: right;
    margin-right: 100px;
  }

  #culture-col-3 {
    float: left;
    margin-left: 100px;
  }

  #culture-col-2 ul {
    font-size: 1.8rem;
    line-height: 2;
  }

}
/* ... */

